fixed alignment of the front page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 body {
     width: 100%;
+    padding: 0;
     height: auto;
     margin: 0 auto;
 }
@@ -10,6 +11,7 @@ body {
     width: auto;
     height: 400px;
     padding: 15px;
+    text-align: center;
 }
 #navContainer {
     float:right;
@@ -31,17 +33,45 @@ body {
     font-weight:bold;
     text-shadow: 1px 1px 10px white;
 }
-#steakImg {
-    width: 30%;
-    margin-left: 35%;
-    margin-right: 30%;
+#logoContainer {
+    width: 40%;
+    text-align: center;
+    margin: auto;
+}
+#logoContainer img {
+    margin: 0;
+    width: 500px;
+}
+#smallLogo {
+    display: none;
+}
+@media only screen and (max-width: 800px) {
+    #logoContainer img {
+        width: 400px;
+    }
+}
+@media only screen and (max-width: 425px) {
+    #logoContainer {
+        display: none;
+    }
+    #smallLogo {
+        display: block;
+        width: 100%;
+        margin-top: 80px;
+    }
+    #logoContainer img {
+        width: 100px;
+    }
 }
 #contents {
     width: auto;
-    height: auto;
     text-align: center;
     padding: 2%;
     background-color: rgb(250, 101, 101);
+}
+#contents ul {
+    margin: 0;
+    padding: 0;
 }
 #contents h1 {
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -76,18 +106,21 @@ body {
 }
 #ad1 {
     background-image: url('photos/ad1.png');
+    margin: 0;
 }
 #ad1:hover {
     box-shadow: 2px 2px 15px 2px white;
 }
 #ad2 {
     background-image: url('photos/ad2.png');
+    margin: 0;
 }
 #ad2:hover {
     box-shadow: 2px 2px 15px 2px white;
 }
 #ad3 {
     background-image: url('photos/ad3.png');
+    margin: 0;
 }
 #ad3:hover {
     box-shadow: 2px 2px 15px 2px white;
@@ -105,6 +138,7 @@ body {
 }
 #iconUnorderedList {
     margin: auto;
+    padding: 0;
     text-align: center;
 }
 .icons {
